Revision history for {{$dist->name}}

{{$NEXT}}

5.034     2015-03-20 10:57:07-04:00 America/New_York
        - require new Config::MVP for better exceptions (that we rely on)
        - point to IRC in dist metadata

5.033     2015-03-17 07:45:36-04:00 America/New_York
        - NextRelease now bases the new file on disk on the original file on
          disk, skipping any munging that happened in between
        - improve error message when a plugin can't be loaded
        - added "use_begin" option to PkgVersion

5.032     2015-02-21 09:36:00-05:00 America/New_York
        - when :version is in plugin config, it's now enforced as soon as it's
          seen
        - add more documentation about bytes/text files
        - PruneCruft also prunes _eumm/* now

5.031     2015-01-08 22:04:30-05:00 America/New_York
        - correct a test to avoid testing symlinks on Win32

5.030     2015-01-04 22:31:38-05:00 America/New_York
        - fixed [GatherDir]'s handling of symlinks to directories
        - [AutoPrereqs] now filters out all namespaces found in contained
          modules, not just the one corresponding to the module filename

5.029     2014-12-14 14:44:44-05:00 America/New_York
        - fix new error in [PkgVersion] when a module had no package
          statements
        - further rip out use of JSON.pm

5.028     2014-12-12 19:06:23-05:00 America/New_York
        - fix regression in [PkgVersion] that made false-positive
          identifications for pre-existing assignments to $VERSION
        - try avoid cases in which plugin code directly modifies file list
        - switch, tentatively, to JSON::MaybeXS

5.027     2014-12-09 09:30:30-05:00 America/New_York
        - fix regression in Plugin->plugin_from_config which started passing a
          list of pairs rather than a hashref

5.026     2014-12-08 21:33:55-05:00 America/New_York
        - eliminate use of Moose::Autobox
        - various small performance optimizations